; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/lib/libc/gen/extr_t_siginfo.c_sigfpe_flt_action.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/lib/libc/gen/extr_t_siginfo.c_sigfpe_flt_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@fltdiv_signalled = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"FPE handler called more than once\00", align 1
@SIGFPE = common dso_local global i32 0, align 4
@FPE_FLTDIV = common dso_local global i32 0, align 4
@sigfpe_flt_env = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_4__*, i8*)* @sigfpe_flt_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sigfpe_flt_action(i32 %0, %struct.TYPE_4__* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to i32*
  %11 = call i32 @sig_debug(i32 %7, %struct.TYPE_4__* %8, i32* %10)
  %12 = load i32, i32* @fltdiv_signalled, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* @fltdiv_signalled, align 4
  %14 = icmp ne i32 %12, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = call i32 @atf_tc_fail(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %3
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @SIGFPE, align 4
  %22 = call i32 @ATF_REQUIRE_EQ(i32 %20, i32 %21)
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @FPE_FLTDIV, align 4
  %27 = call i32 @ATF_REQUIRE_EQ(i32 %25, i32 %26)
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @ATF_REQUIRE_EQ(i32 %30, i32 0)
  %32 = load i32, i32* @sigfpe_flt_env, align 4
  %33 = call i32 @siglongjmp(i32 %32, i32 1)
  ret void
}

declare dso_local i32 @sig_debug(i32, %struct.TYPE_4__*, i32*) #1

declare dso_local i32 @atf_tc_fail(i8*) #1

declare dso_local i32 @ATF_REQUIRE_EQ(i32, i32) #1

declare dso_local i32 @siglongjmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
